--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
   "license": "ISC",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "dependencies": {
     "dayjs": "^1.11.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@piktew/eslint-config-node": "^1.0.0",
-    "@types/node": "^18.16.3",
-    "eslint": "^8.39.0",
+    "@types/node": "^18.16.5",
+    "eslint": "^8.40.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.30.1"
+    "vitest": "^0.31.0"
   }
 }
